@@ -1,3 +1,7 @@
+2005-03-10  Roger Sayle  <roger@eyesopen.com>
+
+	* gcc.dg/builtins-32.c: Add new run-time tests for long double.
+
 2005-03-10  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/20322
